# aes67-vsc

./: Cargo.toml  README.md  debug.sh  example.env  install.sh  test.rest
.github/workflows/: publish.yaml
src/: actor.rs  audio_system.rs  discovery_cleanup.rs  error.rs  lib.rs  main.rs  ptp.rs  rtp.rs  rtp_rx.rs  rtp_tx.rs  sap.rs  status.rs  ui.rs  utils.rs  vsc_ui.rs
src/audio_system/: jack.rs
src/ptp/: statime_linux.rs
src/rtp/: audio_system.rs  mod.rs  rx.rs  socket.rs  tx.rs
src/rtp/audio_system/: jack.rs
src/utils/: buffers.rs  rtp.rs  time.rs
web-ui/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web-ui/src/: App.tsx  Helmet.tsx  api.ts  hooks.ts  main.tsx
web-ui/src/components/create_sender/: CreateReceiverForm.tsx  CreateSenderForm.tsx  DiscoveryList.tsx
