[package]
name = "aes67-vsc"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "A virtual AES67 sound card for Linux"
repository = "https://github.com/babymotte/aes67-vsc.git"
license = "AGPL-3.0-or-later"
keywords = ["aes67", "virtual", "soundcard", "audio"]
categories = ["multimedia", "network-programming"]

[features]
jemalloc = ["tikv-jemallocator"]
default = ["jemalloc"]

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
dotenv = "0.15.0"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
pnet = "0.35.0"
rtp-rs = "0.6.0"
sap-rs = "0.2.5"
sdp = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socket2 = "0.5.7"
statime = "0.2.1"
statime-linux = "0.2.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full", "net", "rt-multi-thread"] }
tokio-graceful-shutdown = "0.15.1"
tokio-util = "0.7.12"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
opt-level = 3
