[package]
name = "aes67-vsc"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "A virtual AES67 sound card for Linux"
repository = "https://github.com/babymotte/aes67-vsc.git"
license = "AGPL-3.0-or-later"
keywords = ["aes67", "virtual", "soundcard", "audio"]
categories = ["multimedia", "network-programming"]

[[bin]]
name = "aes67-vsc-rtp"
path = "src/main.rs"

[[bin]]
name = "aes67-vsc-jack"
path = "src/bin/aes67_vsc_jack.rs"

[[bin]]
name = "aes67-vsc-ptp"
path = "src/bin/aes67_vsc_ptp.rs"

[features]
jemalloc = ["tikv-jemallocator"]
default = ["jemalloc"]

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
clap = { version = "4.5.17", features = ["derive"] }
dotenv = "0.15.0"
fixed = "1.28.0"
hex = "0.4.3"
hostname = "0.4.0"
jack = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.159"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
pin-project-lite = "0.2.14"
pnet = "0.35.0"
rand = "0.8.5"
regex = "1.11.0"
rtp-rs = "0.6.0"
sap-rs = "0.2.6"
sdp = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared_memory = "0.12.4"
socket2 = "0.5.7"
statime = "0.2.2"
statime-linux = "0.2.2"
thiserror = "1.0.63"
thread-priority = "1.1.0"
timestamped-socket = "0.2.5"
tokio = { version = "1.40.0", features = ["net", "rt-multi-thread", "process"] }
tokio-graceful-shutdown = "0.15.1"
tokio-util = "0.7.12"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
worterbuch-client = "0.45.2"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }


[lints.rust]
# unsafe_code = "forbid"

[lints.clippy]
all = "deny"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "deny"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
opt-level = 3
